--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coffe-delivery",
+  "name": "delivery",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,20 +10,26 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.10",
+    "axios": "^1.3.4",
     "immer": "^9.0.16",
     "phosphor-react": "^1.4.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gallery-carousel": "^0.4.0",
     "react-hook-form": "^7.38.0",
+    "react-loading": "^2.0.3",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
+    "sweetpagination": "^1.0.15",
     "zod": "^3.19.1"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-gallery-carousel": "^0.2.2",
     "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^2.0.0",
     "eslint": "^8.21.0",
